整合mybatis;添加对应controller层对应代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.thymeleaf.cache=false        
+spring.devtools.restart.enabled=true   
+spring.devtools.restart.additional-paths=src/main/java  
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://47.94.204.106:3306/paranoid_poem
+spring.datasource.username=root
+spring.datasource.password=Root@0616
+
+mybatis.type-aliases-package=com.paranoid.poem.entity
+mybatis.mapperLocations=classpath:mappers/*.xml
